Aplicando layouts para Activities
adicionar Views via código Java e via arquivo estático;
implementar layouts que apresentam listas;
utilizar AdapterViews em específico o ListView.

--- a/Agenda/app/src/main/res/layout/activity_main.xml
+++ b/Agenda/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Vinicius"
-        tools:layout_editor_absoluteX="193dp"
-        tools:layout_editor_absoluteY="215dp" />
+    <ListView
+        android:id="@+id/activity_main_lista_de_alunos"
+        android:layout_width="409dp"
+        android:layout_height="889dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
