04. Trabalhando com arquivo fonte do layout
Adicionar ícones no projeto;
Implementar layout via XML;
Implementar layouts com o LinearLayout;
Implementar layout de formulário;
Refatorar Activities em relação ao pacote e nomes;
Implementar App Bar e uso do AppCompatActivity.

--- a/Agenda/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/Agenda/app/src/main/res/layout/activity_lista_alunos.xml
@@ -6,17 +6,21 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/activity_main_fab_novo_aluno"
+        android:id="@+id/activity_lista_fab_novo_aluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:src="@drawable/ic_action_novo_aluno"
+        app:tint="#FFFFFF"
+        app:backgroundTint="#000000"
+        />
 
     <ListView
-        android:id="@+id/activity_main_lista_de_alunos"
+        android:id="@+id/activity_lista_de_alunos_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
